@@ -9,6 +9,8 @@ Version 3.7
 - Added plugin rmsplice to remove ads insertions when signaled using SCTE 35
   splice information.
 
+- Added option --add-ca-descriptor to plugin pmt.
+
 - More details are displayed in SCTE 35 splice information.
 
 - The command tsp --list is now paged, like option --help.
